--- a/airflow/www/templates/airflow/dags.html
+++ b/airflow/www/templates/airflow/dags.html
@@ -187,9 +187,9 @@
         </tbody>
     </table>
     {% if not hide_paused %}
-    <a href="/admin/?showPaused=False">Hide Paused DAGs</a>
+    <a href="/airflow/admin/?showPaused=False">Hide Paused DAGs</a>
     {% else %}
-    <a href="/admin/?showPaused=True">Show Paused DAGs</a>
+    <a href="/airflow/admin/?showPaused=True">Show Paused DAGs</a>
     {% endif %}
   </div>
 {% endblock %}
